--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "oh-vue-icons": "^1.0.0-rc3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
